--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-out/
-/samples/Basic_ControlPoint/include/device/
+# generated binaries
+out
+
+# dev tools, editors, etc.
+language.settings.xml
+.settings
+nbproject
+.*.swp
+.vscode
+GTAGS
+GRTAGS
+GPATH
+
+# Microsoft Visual SourceSafe files
+vssver2.scc
+
+.metadata
+.submodule
